--- a/app/src/main/res/layout/activity_example_1.xml
+++ b/app/src/main/res/layout/activity_example_1.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ExampleActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -11,7 +12,7 @@
         android:layout_height="0dp"
         android:background="@color/colorPrimary"
         android:gravity="center"
-        android:text="This is Activity 1"
+        android:text="This is Activity 2"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@id/ad_container"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,17 +27,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:onClick="onClickButton"
-        android:layout_marginTop="8dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="8dp" />
 
 </android.support.constraint.ConstraintLayout>
