--- a/afbilling/src/main/res/layout/layout_rewarded_loading.xml
+++ b/afbilling/src/main/res/layout/layout_rewarded_loading.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent">
 
     <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyle"
+        android:id="@+id/af_rewarded_loading_pb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
