--- a/afbilling/src/main/res/layout/layout_rewarded_loading.xml
+++ b/afbilling/src/main/res/layout/layout_rewarded_loading.xml
@@ -3,10 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/rewarded_progress_bg">
 
     <ProgressBar
-        android:id="@+id/af_rewarded_loading_pb"
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
